#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-01-31 Fri> *1.1.5*

Added global system prompt for consistent response formatting

- Added =ollama-buddy-global-system-prompt= customization with sensible default instructing models to avoid markdown tables and use plain prose
- Added =ollama-buddy-global-system-prompt-enabled= toggle (default: t) to enable/disable the global prompt
- Global prompt is prepended to session-specific system prompts, providing baseline formatting across all models and providers
- Added =ollama-buddy-toggle-global-system-prompt= command to quickly toggle the feature
- Added toggle to transient menu under "Display Toggle" (key: 9)
- Works with all providers: Ollama, OpenAI, Claude, Gemini, Grok, and Codestral

This feature helps ensure consistent response formatting across different models, avoiding issues like unexpected markdown tables in responses.

Consolidated model management

- Moved "Recommended Models (Pull)" section into =C-c W= model management buffer
- Removed =C-c A= (Detailed Info) keybinding and =ollama-buddy-show-interface-info= function
- Updated welcome screen to reference =C-c W= for model management

** <2026-01-31 Fri> *1.1.4*

Header-line and keybinding improvements

- Added =C-c RET= keybinding to send prompts (matches gptel convention)
- Simplified header-line: removed backend indicator (N/C)
- Changed header-line "Markdown" indicator to "MD" for compactness
- Fixed markdown to org heading conversion: MD headings now offset by 2 levels so H1 becomes org level 3, properly nesting under the =** [MODEL] RESPONSE= heading

** <2026-01-31 Fri> *1.1.3*
